# qibochem

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  lih.xyz  pyproject.toml  setup.py
.github/: .codecov.yml
.github/workflows/: conda.yml  deploy.yml  publish.yml  tests.yml
benchmarks/: main.py  run-benchmark.sh
benchmarks/benchmarks/: logger.py  scripts.py  utils.py
benchmarks/benchmarks/circuits/: __init__.py  qasm.py  qibo.py
benchmarks/benchmarks/libraries/: __init__.py  abstract.py  cirq.py  hybridq.py  projectq.py  qcgpu.py  qibo.py  qiskit.py  qulacs.py
benchmarks/benchmarks/tests/: conftest.py  test_libraries.py  test_qibo_benchmarks.py  test_qibo_circuits.py
benchmarks/data/: plot-graphs.py
benchmarks/scripts/: README.md  evolution_dense.sh  evolution_trotter.sh  fusion.sh  libraries_double.sh  libraries_fusion.sh  libraries_single.sh  multigpu.sh  qibo.sh  qibojit.sh
doc/source/: conf.py  index.rst
doc/source/api-reference/: .ansatz.rst.swp  ansatz.rst  driver.rst  index.rst  measurement.rst  molecule.rst  selected_ci.rst
doc/source/appendix/: citing-qibochem.rst
doc/source/code-examples/: examples.rst  index.rst  molecule.rst
doc/source/developer-guides/: contributing.rst  general.rst  index.rst
doc/source/getting-started/: ansatz.rst  cli.rst  index.rst  installation.rst  measurement.rst  molecule.rst  quickstart.rst
doc/source/tutorials/: acrolein.xyz  adaptive.rst  ansatz.rst  casscf_mos.npy  excited_states.ipynb  hamiltonian.rst  index.rst  measurement.rst  molecule.rst  qse_H2.ipynb  qse_acrolein.ipynb
docs/source/: conf.py  index.rst
docs/source/api-reference/: driver.rst  hamiltonian.rst  index.rst
docs/source/developer-guides/: index.rst
docs/source/getting-started/: ansatz.rst  hamiltonian.rst  hamiltonian_mapping.rst  index.rst  installation.rst  measurement.rst  molecule.rst
example/: grouping.py  ucc_example1.py  ucc_example2.py
examples/: br_example.py  constrained_hea.py  expectation_from_samples.py  folded_vqe_excited_state_workflow.py  h3p.xyz  lih.xyz  paper2.py  paper3_caleb.py  paper3_conan.py  physics_constrained_hea.py  psr_paper2.py  psr_paper3.py  ucc_example1.py  ucc_example2.py
examples/cli/: README.md  h2_hf.yaml  h2_vqe_ucc.yaml  h3p_basis_rotation.yaml  lih_vqe_ucc.yaml
examples/cli/pes_scan/: .gitignore  run_scan.py
src/qibochem/: __init__.py  __main__.py
src/qibochem/ansatz/: __init__.py  _ansatz.py  ansatz.py  basis_rotation.py  feb.py  givens_excitation.py  hardware_efficient.py  hf_reference.py  (+6 more)
tests/: conftest.py  test_ansatz.py  test_ansatz_util.py  test_basis_rotation.py  test_cli.py  test_cli_schema.py  test_expectation_samples.py  test_givens_excitation.py  test_hamiltonian_folded.py  test_hardware_efficient.py  test_hf_circuit.py  test_measurement.py  test_measurement_optimisation.py  test_measurement_util.py  test_molecule.py  test_qsci_ground_state.py  test_qse.py  test_symmetry_preserving_ansatz.py  test_ucc.py
tutorials/: 1-introduction-to-quantum-computing-in-chemistry.ipynb  2-challenges-of-quantum-computing-in-chemistry.ipynb  VQD_tutorial.ipynb  chemistry-with-qibo-part2.ipynb  excited_states.ipynb  h2.xyz  qibo-demonstration.ipynb  qibochem-introduction-to-chemistry-with-qibo.ipynb  qsci_ground_state.ipynb
(+33 files in other folders)
