[tool.poetry]
name = "qibochem"
version = "0.0.5"
description = "Quantum chemistry module for quantum computing with Qibo"
authors = ["The Qibo team"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/qiboteam/qibochem/"
documentation = "https://qibo.science/qibochem/stable"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]
packages = [{ include = "qibochem", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
qibo = ">=0.2.18"
openfermion = ">=1.5,<1.7"
pyscf = "^2.9.0"
scipy = "^1.15.2"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinxcontrib-katex = "^0.9.6"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.1"
ipython = "^8.12.0"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
pytest-env = ">=0.8.1"
pylint = "^3.3.5"

[tool.poe.tasks]
test = "pytest"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pylint.reports]
output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = ['--cov=qibochem', '--cov-report=xml', '--cov-report=html']
